syntax = "proto3";

package authentication;
// AUTH SERVICE
service AuthService {
    rpc logIn (LoginAuthDto) returns (AuthResp);
    rpc register (RegisterAuthDto) returns (AuthResp);
    rpc refreshToken (SessionUserModel) returns (AuthResp);
    rpc googleCallback (UserDataCallback) returns (AuthResp);
    rpc checkPermission (CheckPersModel) returns (CheckResp);
}
message LoginAuthDto {
    string phoneNumber = 1;
    string password = 2;
}
message RegisterAuthDto {
    string phoneNumber = 1;
    string password = 2;
    string fullName = 3;
    int32 birthDate = 4;
    string email = 5;

}
message SessionUserModel {
    string sid = 1;
    string userId = 2;
    string sub = 3;
    string role = 4;
    string username = 5;
}
message UserDataCallback {
    string id = 1;
    string email = 2;
    string fullName = 3;
}
message CheckResp {
    bool denied = 1;
}
message CheckPersModel {
    string role = 1;
    string url = 2;
}
message AuthResp {
    string accessToken = 1;
    string refreshToken = 2;
    int32 expiredAt = 3;
    string userId = 4;
}


